--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub repo practice</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque alias fuga repudiandae, placeat minus ad quam hic, voluptatibus sint ipsam sapiente tempore impedit unde ullam nobis cumque quis. Veritatis, hic.</p>
+    <div>
+        <h3>This is a test repo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatem quisquam dicta nisi voluptatum repellendus neque eligendi laborum. Praesentium voluptates culpa exercitationem obcaecati architecto. Dolor cumque similique ratione quae doloremque.</p>
+    </div>
 </body>
 </html>
