add more blog and command list

--- a/index.html
+++ b/index.html
@@ -11,5 +11,25 @@
         <h3>This is a test repo</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatem quisquam dicta nisi voluptatum repellendus neque eligendi laborum. Praesentium voluptates culpa exercitationem obcaecati architecto. Dolor cumque similique ratione quae doloremque.</p>
     </div>
+    <div>
+        <h3>This is a second test repo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatem quisquam dicta nisi voluptatum repellendus neque eligendi laborum. Praesentium voluptates culpa exercitationem obcaecati architecto. Dolor cumque similique ratione quae doloremque.</p>
+    </div>
+    <div>
+        <h3>This is a third test repo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatem quisquam dicta nisi voluptatum repellendus neque eligendi laborum. Praesentium voluptates culpa exercitationem obcaecati architecto. Dolor cumque similique ratione quae doloremque.</p>
+    </div>
+    <div>
+        <h3>This is a fourth test repo</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatem quisquam dicta nisi voluptatum repellendus neque eligendi laborum. Praesentium voluptates culpa exercitationem obcaecati architecto. Dolor cumque similique ratione quae doloremque.</p>
+    </div>
+    <div>
+        <h3>git command needed for every change</h3>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m "meaningful message"</li>
+            <li>git push</li>
+        </ol>
+    </div>
 </body>
 </html>
