--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
             <li>git push</li>
         </ol>
     </div>
+    <div>
+        <h3>IMAGE</h3>
+        <img src="images/josh-berquist-_4sWbzH5fp8-unsplash.jpg" alt="">
+    </div>
 </body>
 </html>
