--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div>
         <h3>IMAGE</h3>
-        <img src="images/josh-berquist-_4sWbzH5fp8-unsplash.jpg" alt="">
+        <img width="300px" src="images/josh-berquist-_4sWbzH5fp8-unsplash.jpg" alt="">
     </div>
 </body>
 </html>
